--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <main class="main-content">
       <section>
         <h2>About Me</h2>
-        <p>I am an undergraduate student currently double majoring in Mechanical Engineering and Electrical Engineering. Research intern at the Laboratory of Artificial Intelligence and Robotics (LAIR), advised by Prof. Hyeonwoo Yu.</p>
+        <p>I am an undergraduate student currently double majoring in Mechanical Engineering and Electrical Engineering.<br>
+          Research intern at the Laboratory of Artificial Intelligence and Robotics (LAIR), advised by Prof. Hyeonwoo Yu.
+        </p>
       </section>
 
       <section>
