--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <aside class="sidebar">
-      <img src="IMG_4837.jpg" alt="Profile Picture" class="profile-img">
+      <img src="IMG_4837.JPG" alt="Profile Picture" class="profile-img">
       <h2> HWANGJAEIK </h2>
       <p><a href="mailto:jaeik0211@g.skku.edu">jaeik0211@g.skku.edu</a></p>
       <p><a href="https://github.com/JAEIK-HWANG" target="_blank">Github</a></p>
