index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li>SLAM(Simultaneous Localization and Mapping)</li>
           <li>3D reconstruction</li>
           <li>Autonomous Driving</li>
-          <li>Conputer Vision</li>
+          <li>Computer Vision</li>
         </ul>
       </section>
 
